Fix collapsing login form on mobile devices

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -4,7 +4,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: 100%;
   color: $mine-shaft;
 }
 
@@ -14,9 +13,8 @@
   border: solid 1px $dusty-gray-01;
   box-shadow: 0 2px 5px 0 $light-sky-blue;
   border-radius: 3px;
-  max-height: 360px;
+  height: 360px;
   max-width: 300px;
-  height: 100%;
   width: 100%;
   margin: 6% auto 0 auto;
 }
